media/error_tc/error_246.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_vqY3HjC.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_vqY3HjC.cpp:8:1: error: expected ';' before '}' token
 }
 ^
